<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- PaginatedMediaList -->
    <string name="paginated_media_list_title_placeholder">[Title]</string>
    <string name="process_button_text">[Text]</string>
    <!-- Common -->
    <string name="app_mame">Tombolator</string>
    <string name="icon_media_type_content_description">Medientyp-Icon</string>
    <string name="icon_sort_media_content_description">Sortiere Medien absteigend</string>
    <string name="icon_search_media_content_description">Medien durchsuchen</string>
    <string name="button_accept">Ja</string>
    <string name="button_deny">Nein</string>
    <string name="button_back">Zurück</string>
    <string name="button_add_to_tombola">Tombola</string>
    <string name="button_save">Sichern</string>
    <string name="button_tombolas">Tombolas</string>
    <string name="button_load_database_backup">Laden</string>
    <string name="button_save_database_backup">Speichern</string>
    <string name="button_media">Medien</string>
    <string name="button_config">Optionen</string>
    <string name="button_new">Neu</string>
    <string name="button_nuke">Nuke</string>
    <string name="button_draw">Ziehen</string>
    <string name="button_add">Hinzufügen</string>
    <string name="button_edit">Ändern</string>
    <string name="button_delete">Löschen</string>
    <string name="button_continue">Weiter</string>
    <string name="button_next_or_prev_page">Seite</string>
    <string name="title_config">Optionen</string>
    <string name="title_tombolas">Deine Tombolas</string>
    <string name="title_media">Deine Medien</string>
    <string name="title_new_media">Neues Medium</string>
    <string name="title_new_book">Buch/E-Book</string>
    <string name="title_new_audioplay">CD/Kassette</string>
    <string name="title_new_movie">DVD/Blu-Ray</string>
    <string name="title_choose_media_type">Wähle Medium</string>
    <string name="title_new_Tombola">Neue Tombola</string>
    <string name="title_media_details">Medium Details</string>
    <string name="title_tombola_details">Tombola Details</string>
    <string name="title_edit_tombola">Tombola bearbeiten</string>
    <string name="title_media_available">Verfügbare Medien</string>
    <string name="title_media_added">Medien in Tombola</string>
    <string name="title_media_all">Alle Medien</string>
    <string name="label_name">Name</string>
    <string name="label_title">Titel</string>
    <string name="text_view_content">Inhalt</string>
    <string name="text_draw_book_page_one">Liste I\n----------\n* Wirst Du da sein?\n* Das Leuchten der Stille\n* Die Schöne und das Biest</string>
    <string name="text_draw_book_page_two">Liste II\n----------\n* City of Bones\n* Nothing Hill\n* Harry Potter\n* Winnie Puuh\n* Vaiana</string>
    <string name="label_number">Nummer</string>
    <string name="label_author">Author</string>
    <string name="label_director">Regisseur</string>
    <string name="label_type">Typ</string>
    <string name="label_created_at">Angelegt am</string>
    <string name="label_media_all">Medien gesamt</string>
    <string name="label_media_available">…davon verfügbar</string>
    <string name="label_media_drawn">…davon gezogen</string>
    <string name="lable_media_type">Medien nach dem Ziehen…</string>
    <string name="label_id">ID</string>
    <string name="label_search">Suche</string>
    <string name="label_what_category">Welche Kategorie(n)?</string>
    <string name="label_zu_tombola_hinzufuegen">Zu Tombola hinzufügen</string>
    <string name="label_separator_slash">/</string>
    <string name="label_export_version">Zuletzt gespeichert am </string>
    <string name="media_type_cassette">Kassette</string>
    <string name="media_type_cd">CD</string>
    <string name="media_type_dvd">DVD</string>
    <string name="media_type_blu_ray">Blu-ray</string>
    <string name="media_type_book">Buch</string>
    <string name="media_type_ebook">E-Book</string>
    <string name="content_type_audio_play">Hörspiel</string>
    <string name="content_type_audio_book">Hörbuch</string>
    <string name="content_type_movie">Film</string>
    <string name="content_type_series">Serie</string>
    <string name="content_type_book">Buch</string>
    <string name="content_type_ebook">E-Book</string>
    <string name="draw_media_on_empty_tombola">In dieser Tombola\ngibtes noch\nkeine Medien.</string>
    <string name="media_creation_question_media_type">Mediumstyp</string>
    <string name="media_creation_question_content_type">Inhaltstyp</string>
    <!-- Toasts -->
    <string name="toast_media_name_empty">Bitte gib einen Namen an</string>
    <string name="toast_media_title_empty">Bitte gib einen Titel an</string>
    <string name="toast_media_number_empty">Bitte gib eine Nummer an</string>
    <string name="toast_book_author_empty">Bitte gib einen Author an</string>
    <!-- Content description -->
    <string name="description_button_next">Zur nächsten Seite</string>
    <string name="description_button_back">Zurück zu vorherigen Sicht</string>
    <string name="description_button_save">Tombola speichern</string>
</resources>