<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/color_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".media.MediaCreateNewFragment">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_new_media"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/comic_sans_ms"
            android:textSize="36sp"
            android:id="@+id/text_view_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.05"/>
    <Button
            android:text="@string/button_back"
            android:drawableBottom="@drawable/ic_arrow_left_35"
            android:padding="25dp"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:id="@+id/button_back"
            android:background="@drawable/button_selector_purple"
            android:fontFamily="@font/comic_sans_ms"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.975"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"/>
    <Button
            android:text="@string/button_save"
            android:drawableBottom="@drawable/ic_floppy_disk_35"
            android:padding="25dp"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:id="@+id/button_save"
            android:background="@drawable/button_selector_purple"
            android:fontFamily="@font/comic_sans_ms"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintVertical_bias="0.975"/>
    <EditText
            android:fontFamily="@font/comic_sans_ms"
            android:textSize="20sp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edit_text_name"
            android:autofillHints="@string/label_name"
            android:hint="@string/label_name"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_title"/>
    <EditText
            android:fontFamily="@font/comic_sans_ms"
            android:textSize="20sp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="@string/label_name"
            android:hint="@string/label_title"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_name" android:layout_marginTop="16dp"/>
    <EditText
            android:fontFamily="@font/comic_sans_ms"
            android:textSize="20sp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/number_label"
            app:layout_constraintTop_toBottomOf="@+id/editTextTitle" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:autofillHints="@string/label_number"
            android:hint="@string/label_number"/>
    <Spinner
            android:fontFamily="@font/comic_sans_ms"
            android:textSize="20sp"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:id="@+id/type_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/number_label"
            android:layout_marginTop="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>