<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/color_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:fontFamily="@font/comic_sans_ms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_mame"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="36sp"
            android:id="@+id/text_view_title"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.05"/>
    <Button
            android:text="@string/button_tombolas"
            android:drawableBottom="@drawable/ic_bingo_50"
            android:padding="25dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/button_tombolas"
            android:background="@drawable/button_selector_purple"
            android:fontFamily="@font/comic_sans_ms"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.25"/>
    <Button
            android:text="@string/button_media"
            android:drawableBottom="@drawable/ic_cassette_50"
            android:padding="25dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/button_media"
            android:background="@drawable/button_selector_purple"
            android:fontFamily="@font/comic_sans_ms"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/button_tombolas"
            android:layout_marginTop="32dp"/>
    <Button
            android:text="@string/button_config"
            android:drawableBottom="@drawable/ic_configuration_50"
            android:padding="25dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/button_config"
            android:background="@drawable/button_selector_purple"
            android:fontFamily="@font/comic_sans_ms"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/button_media" android:layout_marginTop="32dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>