<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".media.NewMediaActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_new_media"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="36sp"
            android:id="@+id/textview_title" android:layout_marginTop="52dp"/>
    <Button
            android:text="@string/button_back"
            android:layout_width="100dp"
            android:layout_height="60dp" android:id="@+id/button_back"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="52dp" android:layout_marginStart="52dp" android:layout_marginBottom="52dp"
            android:textSize="18sp"/>
    <Button
            android:text="@string/button_save"
            android:layout_width="150dp"
            android:layout_height="60dp" android:id="@+id/button_save"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="52dp" android:layout_marginRight="52dp" android:layout_marginBottom="52dp"
            android:textSize="18sp"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/text_name"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="200dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="@string/hint_name"
            android:hint="@string/hint_name"/>
</androidx.constraintlayout.widget.ConstraintLayout>