<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background"
        tools:context=".tombolas.TombolaCreateNewFragment">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_new_Tombola"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/comic_sans_ms"
            android:textSize="@dimen/font_size_titles"
            android:id="@+id/text_view_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.025"/>
    <Button
            android:text="@string/button_back"
            android:drawableBottom="@drawable/ic_arrow_left_35"
            android:padding="25dp"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:id="@+id/button_back"
            android:background="@drawable/button_selector_purple"
            android:fontFamily="@font/comic_sans_ms"
            android:textSize="@dimen/font_size"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="15dp"/>
    <Button
            android:text="@string/button_save"
            android:drawableBottom="@drawable/ic_floppy_disk_35"
            android:padding="25dp"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:id="@+id/button_save"
            android:background="@drawable/button_selector_purple"
            android:fontFamily="@font/comic_sans_ms"
            android:textSize="@dimen/font_size"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="15dp"/>
    <EditText
            android:fontFamily="@font/comic_sans_ms"
            android:textSize="@dimen/font_size_labels"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edit_text_name"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="@string/label_name"
            android:hint="@string/label_name" app:layout_constraintTop_toBottomOf="@+id/text_view_title"/>
    <ScrollView
            android:layout_width="360dp"
            android:layout_height="170dp"
            android:id="@+id/scrollView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/textView">
        <LinearLayout
                android:id="@+id/linear_layout_available_media"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>
    </ScrollView>
    <ScrollView
            android:layout_width="360dp"
            android:layout_height="170dp"
            android:id="@+id/scrollView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/textView2">
        <LinearLayout
                android:id="@+id/linear_layout_added_media"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>
    </ScrollView>
    <TextView
            android:text="@string/title_media_available"
            android:textSize="@dimen/font_size_labels"
            android:fontFamily="@font/comic_sans_ms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_name"
            app:layout_constraintHorizontal_bias="0.497"/>
    <TextView
            android:text="@string/title_media_added"
            android:textSize="@dimen/font_size_labels"
            android:fontFamily="@font/comic_sans_ms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2"/>
</androidx.constraintlayout.widget.ConstraintLayout>