<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#d79cff"
             tools:context=".media.MediaMainFragment">

    <TextView
            android:fontFamily="@font/comic_sans_ms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_media"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="36sp"
            android:id="@+id/text_view_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.05"/>
    <Button
            android:background="@drawable/oval_button_purple"
            android:text="@string/button_back"
            android:textSize="14sp"
            android:fontFamily="@font/comic_sans_ms"
            android:drawableBottom="@drawable/ic_arrow"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:id="@+id/button_back"
            android:padding="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95"/>
    <Button
            android:drawableBottom="@drawable/ic_bombe"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/buttonDeleteAll"
            android:background="@drawable/oval_button_purple"
            android:padding="20dp"
            android:scaleType="fitCenter"
            android:text="@string/button_nuke"
            android:textSize="12sp"
            android:fontFamily="@font/comic_sans_ms"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.975"/>
    <Button
            android:id="@+id/button_new_media"
            android:background="@drawable/oval_button_purple"
            android:drawableBottom="@drawable/ic_add"
            android:text="@string/button_new"
            android:textSize="14sp"
            android:fontFamily="@font/comic_sans_ms"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:padding="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintVertical_bias="0.95"/>
    <ScrollView
            android:layout_width="330dp"
            android:layout_height="430dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.35"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/linear_layout_media"/>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>